cli/tests/testdata/run/extension_dynamic_import.ts.out
error: Uncaught (in promise) TypeError: Cannot load extension module from external code
    at [WILDCARD]/extension_dynamic_import.ts:1:14

await import("ext:runtime/01_errors.js");
^
    at async [WILDCARD]/extension_dynamic_import.ts:1:1
